<resources>
    <string name="app_name">Khadamat Seller</string>
    <string name="no_internet_connection">تفقد الاتصال بالانترنت وحاول من جديد</string>
    <string name="retry">محاولة مرة أخرى</string>
    <string name="connecting">جار التحميل</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="btn_sign_in">تسجيل الدخول</string>
    <string name="forget_your_password">نسيت كلمة السر؟</string>
    <string name="dont_have_account">ليس لديك حساب؟</string>
    <string name="btn_sign_up">انشاء حساب</string>
    <string name="cancel">الغاء</string>
    <string name="send">ارسال</string>
    <string name="to_reset_password">لاعادة ضبط كلمة السر، ادخل بريدك الالكتروني واضغط زر ارسال ثم تفقد بريدك الالكتروني واتبع التعليمات.</string>
    <string name="Please_enter_your_email">من فضلك ادخل بريدك الالكتروني</string>
    <string name="check_email_to_reset_password">تم ارسال البريد الالكتروني بنجاح</string>
    <string name="fail_to_send_email_to_reset_password">فشل ارسال البريد الالكتروني، حاول مرة أخرى</string>
    <string name="Please_enter_a_valid_email">ادخل بريد الكتروني صحيح</string>
    <string name="Please_enter_your_password">ادخل كلمة المرور</string>
    <string name="Minimum_length_of_password_is_6">الحد الأدنى لكلمة المرور هو 6 أحرف</string>
    <string name="continue_with_google">المتابعة باستخدام حساب جوجل</string>
    <string name="last_name">الاسم الأخير</string>
    <string name="first_name">الاسم الأول</string>
    <string name="phone">رقم الهاتف</string>
    <string name="confirm_password">تأكيد كلمة السر</string>
    <string name="already_have_account">لديك حساب بالفعل؟</string>
    <string name="finish">انهاء</string>
    <string name="finish_your_profile">اكمل المعلومات ادناه لانهاء انشاء الحساب</string>
    <string name="orders">طلبات</string>
    <string name="my_products">منتجاتي</string>
    <string name="add_product">أضف منتج</string>
    <string name="profile">الملف الشخصي</string>
    <string name="more">المزيد</string>
    <string name="store_name">اسم المحل</string>
    <string name="no_products_found">لا يوجد منتجات</string>
    <string name="product_name">اسم المنتج</string>
    <string name="pound">جنيه</string>
    <string name="product_price_in_numbers">سعر المنتج بالارقام</string>
    <string name="product_description">وصف المنتج</string>
    <string name="add_the_product">أضف المنتج</string>
</resources>
