<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_bar_orders"
        android:icon="@drawable/ic_calender"
        android:title="@string/orders" />

    <item
        android:id="@+id/nav_bar_my_products"
        android:icon="@drawable/ic_cart"
        android:title="@string/my_products" />

<!--    <item-->
<!--        android:id="@+id/nav_bar_add_product"-->
<!--        android:icon="@drawable/ic_add"-->
<!--        android:title="@string/add_product" />-->

    <item
        android:id="@+id/nav_bar_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_bar_more"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/more" />

</menu>