<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/finish_your_profile"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextPhone_google"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_style"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="@dimen/editText_text_size" />

    <EditText
        android:id="@+id/editTextStoreName_google"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_style"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/store_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/editText_text_size" />

    <Spinner
        android:id="@+id/spinnerCityComplete"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_style"
        android:fontFamily="@font/raleway_medium" />

    <Spinner
        android:id="@+id/spinnerCairoAreaComplete"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_style"
        android:fontFamily="@font/raleway_medium"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinnerGizaAreaComplete"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_style"
        android:fontFamily="@font/raleway_medium"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinnerSpecialtyComplete"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_style"
        android:fontFamily="@font/raleway_medium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/finish_google_signUp"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_style"
            android:clickable="true"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="@dimen/button_text_size" />

        <ProgressBar
            android:id="@+id/progressBar_sign_up_google"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</LinearLayout>
