<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/myProductsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:divider="#E0E8E8"
        android:dividerHeight="0.5dp"
        android:drawSelectorOnTop="true"
        android:orientation="vertical" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:src="@drawable/ic_add_white_24dp"
        app:backgroundTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/emptyTVMyProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/raleway_semi_bold"
        android:text="@string/no_products_found"
        android:layout_centerInParent="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/noConnectionViewMyProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="164.5dp"
            android:src="@drawable/ic_cloud_off" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/no_internet_connection"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/retryBtnAddProduct"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>
</RelativeLayout>